ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_early_return_scfg_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
(0) -> (0)
(0) -> (1)
(1) -> (2)
(2) -> (3)
(3) -> (4)
