ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_global_call_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (34) at (2, 5) { };
\node[font=\tiny] (note_0) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 2.5) {Call(0, [1], [])};
\node[font=\tiny] (note_2) at (-1.5, 3.5) {Assign(2, 0)};
\node[font=\tiny] (note_3) at (-1.5, 4.5) {Assign(-2, 2)};
\node[font=\tiny] (note_4) at (-1.5, 5.5) {Return([])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (7, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (22) at (9, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (25) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (26) at (9, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (27) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (28) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (29) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (30) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (31) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (32) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (33) at (10, 4) { };
\node[font=\tiny] (note_5) at (5.5, 0.5) {Block(0)};
\node[font=\tiny] (note_6) at (5.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] (note_7) at (5.5, 2.5) {Assign(-1, 1)};
\node[font=\tiny] (note_8) at (5.5, 3.5) {Return([])};
\node[font=\tiny] (note_9) at (5.5, 0.5) {Block(0)};
\node[font=\tiny] (note_10) at (5.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] (note_11) at (5.5, 2.5) {Assign(-1, 1)};
\node[font=\tiny] (note_12) at (5.5, 3.5) {Return([])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (16);
		\path[->, blue] (1) [bend right] edge  node { } (17);
		\path[->, blue] (2) [bend right] edge  node { } (4);
		\path[->, blue] (7) [loop right] edge  node { } (7);
		\path[->, blue] (1) [bend right] edge  node { } (20);
		\path[->, blue] (1) [bend right] edge  node { } (21);
		\path[->, blue] (1) [bend right] edge  node { } (22);
		\path[->, blue] (0) [bend right] edge  node { } (23);
		\path[->, blue] (7) [bend right] edge  node { } (20);
		\path[->, blue] (7) [bend right] edge  node { } (21);
		\path[->, blue] (7) [bend right] edge  node { } (22);
		\path[->, blue] (1) [bend right] edge  node { } (27);
		\path[->, blue] (7) [bend right] edge  node { } (27);
		\path[->, blue] (1) [bend right] edge  node { } (28);
		\path[->, blue] (1) [bend right] edge  node { } (29);
		\path[->, blue] (1) [bend right] edge  node { } (30);
		\path[->, blue] (7) [bend right] edge  node { } (28);
		\path[->, blue] (7) [bend right] edge  node { } (29);
		\path[->, blue] (7) [bend right] edge  node { } (30);
		\path[->, blue] (0) [bend right] edge  node { } (34);


                \end{tikzpicture}
            \end{document}
