ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_global_get_and_set_multiple_functions_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 3) { };
\node[font=\tiny] (note_5) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_6) at (-1.5, 1.5) {Const(-2, 1.0)};
\node[font=\tiny] (note_7) at (-1.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (10) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (15) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (20) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (21) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (22) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (23) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (27) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (28) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (29) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (30) at (6, 3) { };
\node[font=\tiny] (note_8) at (3.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] (note_9) at (3.5, 1.5) {Const(-1, 1.0)};
\node[font=\tiny] (note_10) at (3.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (10, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (12) at (13, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (13) at (13, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (31) at (12, 5) { };
\node[font=\tiny] (note_0) at (8.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] (note_1) at (8.5, 1.5) {Assign(-2, 1)};
\node[font=\tiny] (note_2) at (8.5, 2.5) {Const(2, 1.0)};
\node[font=\tiny] (note_3) at (8.5, 3.5) {Call(1, [2], [0])};
\node[font=\tiny] (note_4) at (8.5, 4.5) {Call(2, [], [1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (2) [bend right] edge  node { } (17);
		\path[->, blue] (2) [bend right] edge  node { } (18);
		\path[->, blue] (3) [bend right] edge  node { } (6);
		\path[->, blue] (10) [loop right] edge  node { } (10);
		\path[->, blue] (11) [bend right] edge  node { } (21);
		\path[->, blue] (11) [bend right] edge  node { } (22);
		\path[->, blue] (11) [bend right] edge  node { } (23);
		\path[->, blue] (11) [bend right] edge  node { } (24);
		\path[->, blue] (1) [bend right] edge  node { } (17);
		\path[->, blue] (1) [bend right] edge  node { } (18);
		\path[->, blue] (10) [bend right] edge  node { } (21);
		\path[->, blue] (10) [bend right] edge  node { } (22);
		\path[->, blue] (10) [bend right] edge  node { } (23);
		\path[->, blue] (10) [bend right] edge  node { } (24);
		\path[->, blue] (0) [bend right] edge  node { } (31);


                \end{tikzpicture}
            \end{document}
