ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_global_set_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (7) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (9) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (11) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (12) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (13) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (15) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (16) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (17) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (18) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (1, 2) { };
\node[font=\tiny] (note_3) at (-1.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] (note_4) at (-1.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (10) at (7, 2) { };
\node[font=\tiny] (note_0) at (2.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (2.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] (note_2) at (2.5, 2.5) {Call(1, [], [1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (7) [loop right] edge  node { } (7);
		\path[->, blue] (8) [bend right] edge  node { } (12);
		\path[->, blue] (8) [bend right] edge  node { } (13);
		\path[->, blue] (8) [bend right] edge  node { } (14);
		\path[->, blue] (8) [bend right] edge  node { } (15);
		\path[->, blue] (7) [bend right] edge  node { } (12);
		\path[->, blue] (7) [bend right] edge  node { } (13);
		\path[->, blue] (7) [bend right] edge  node { } (14);
		\path[->, blue] (7) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (6);


                \end{tikzpicture}
            \end{document}
