ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_if_else_binop_scfg_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
(0) -> (3)
(0) -> (7)
(1) -> (1)
(1) -> (10)
(10) -> (11)
